--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "deprecated-react-native-prop-types": "^4.1.0",
     "earth-coordinate-distance": "^1.0.6",
     "fbjs": "^3.0.5",
+    "formdata-node": "^5.0.1",
     "i18next": "^23.2.7",
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.6",
