--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-otp-textinput": "^1.0.1",
     "react-native-pager-view": "^6.2.0",
+    "react-native-pdf": "^6.7.1",
     "react-native-permissions": "^3.8.3",
     "react-native-popup-menu": "^0.16.1",
     "react-native-progress": "^5.0.0",
