--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/datetimepicker": "^7.3.0",
     "@react-native-community/geolocation": "^3.0.6",
     "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-firebase/analytics": "^18.6.1",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/messaging": "^18.3.0",
     "@react-navigation/material-top-tabs": "^6.6.3",
