--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.6",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "native-base": "^3.4.28",
     "patch-package": "^7.0.0",
     "pod-install": "^0.1.38",
@@ -59,6 +60,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-leaflet-maps": "^0.2.1",
     "react-native-linear-gradient": "^2.7.3",
+    "react-native-localize": "^3.0.4",
     "react-native-maps": "^1.7.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-otp-textinput": "^1.0.1",
