--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "lint:fix": "eslint --fix ."
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "dependencies": {
     "@dillionverma/react-native-swipe-button": "^1.1.3",
     "@notifee/react-native": "^7.8.0",
     "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-native-camera-roll/camera-roll": "^7.5.0",
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-community/datetimepicker": "^7.3.0",
     "@react-native-community/geolocation": "^3.0.6",
@@ -24,7 +32,9 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/jest": "^29.5.12",
     "axios": "^1.4.0",
+    "ccarellice-react-native-barcode-generator": "^0.0.4",
     "core-js": "^3.31.0",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.9",
@@ -33,6 +43,7 @@
     "fbjs": "^3.0.5",
     "formdata-node": "^5.0.1",
     "i18next": "^23.2.7",
+    "jsbarcode": "^3.11.6",
     "lodash": "^4.17.21",
     "lottie-react-native": "^5.1.6",
     "moment": "^2.29.4",
@@ -83,6 +94,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-view-shot": "^3.8.0",
     "react-native-vision-camera": "^2.15.4",
     "react-native-webview": "^13.3.1",
     "react-navigation-shared-element": "^3.1.3",
@@ -93,21 +105,32 @@
     "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.6",
+    "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.22.6",
     "@babel/runtime": "^7.22.6",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.7",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.4.4",
     "@tsconfig/react-native": "^3.0.2",
     "@types/metro-config": "^0.76.3",
     "@types/react": "^18.2.14",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.0",
-    "eslint": "^8.44.0",
-    "jest": "^25.5.4",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-native": "^4.1.0",
+    "jest": "^29.7.0",
+    "jest-config": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "metro-react-native-babel-preset": "0.76.5",
     "prettier": "^2.8.8",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.1.2",
     "typescript": "4.8.4"
   },
   "engines": {
